# Classic-Chess

./: .gitignore  CMakeLists.txt  todo
src/: main.cpp  main.hpp
